--- a/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
@@ -6,24 +6,33 @@
 }
 
 <h2>Chỉnh Sửa</h2>
-<script src="~/Plugin/ckeditor/ckeditor.js"></script>
-@using (Html.BeginForm("Edit", "BaiViets", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@section js{
+    <script src="~/Plugin/ckfinder/ckfinder.js"></script>
+    <script src="~/Plugin/ckeditor/ckeditor.js"></script>
+    <script>
+        jQuery(document).ready(function ($) {
+            $('#btn-img-select').click(function (e) {
+                e.preventDefault();
+                var finder = new CKFinder();
+                finder.selectActionFunction = function (url) {
+                    $("#imgvalue").val(url);
+                };
+                finder.popup();
+            });
+            CKEDITOR.replace('NoiDung');
+        });
+    </script>
+}
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <h4>Bài Viết</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.ID)
 
-    <div class="form-group">
-        @Html.Label("Ngày Đăng Bài", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.NgayDangBai, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.NgayDangBai, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
     <div class="form-group">
         @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -34,19 +43,11 @@
     </div>
 
     <div class="form-group">
-        @Html.Label("Người Đăng", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
         @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control", @id = "FullDescription" } })
+            @Html.TextAreaFor(model => model.NoiDung, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
-            <script>CKEDITOR.replace("FullDescription")</script>
+            <script>CKEDITOR.replace("NoiDung")</script>
         </div>
     </div>
 
@@ -58,12 +59,13 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-2" for="IMG">Hình Ảnh</label>
+        @Html.Label("Người Đăng", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
+            @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
         </div>
-        <img id="Picture" src="@Url.Action("Picture", new { Model.ID })" />
     </div>
+    @Html.HiddenFor(model => model.ID)
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
