--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SEP21.Models.BaiViet>
 @{
     ViewBag.Title = "Home Page";
-    
+
 }
 <main id="main">
     <!-- ======= Hero Section ======= -->
@@ -40,21 +40,27 @@
                     </div>
                     <h2 style="font-family: Arial">Tin tức - hoạt động</h2>
                 </div>
-
-                <div class="row content">
-                    @foreach (var item in Model)
-                    {
-                        var url = "/SEP24Team5/Tin-tuc/" + item.Title + "-" + item.ID;
-                        <div class="col-lg-6">
-                            <div class="card">
-                                <a href="@url">
-                                    <img class="img-fluid" width="600px" height="400px" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
-                                    <div class="card-body">
-                                        <h3 class="card-title">@item.TieuDe</h3>
+                <div class="container">
+                    <div class="row">
+                        <!-- Blog entries-->
+                        <div class="col-lg-12">
+                            <div class="row">
+                                @foreach (var item in Model)
+                                {
+                                    var url = "/SEP24Team5/Tin-tuc/" + item.Title + "-" + item.ID;
+                                    <div class="col-lg-4">
+                                        <div class="card mb-4">
+                                            <a href="@url"><img class="card-img-top" width="200px" height="220px" src="@Url.Action("Picture", "Home", new { item.ID })" alt="@item.Title" /></a>
+                                            <div class="card-body">
+                                                <div class="small text-muted">@item.LoaiBaiViet1.TenLoaiBaiViet</div>
+                                                <h2 class="card-title h4">@item.TieuDe</h2>
+                                                <p class="small text-muted">@item.NgayDangBai</p>
+                                            </div>
+                                        </div>
                                     </div>
-                                </a>
+                                }
                             </div>
                         </div>
-                    }
+                    </div>
                 </div>
 </main><!-- End #main -->
