--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -31,9 +31,16 @@
     <link rel="stylesheet" href="@Url.Content("~/assets1/vendor/fonts/material-design-iconic-font/css/materialdesignicons.min.css")">
     <!-- Template Main CSS File -->
     <link href="@Url.Content("~/assets/css/style.css")" rel="stylesheet">
-
+    @*<link href="@Url.Content("~/css/styles.css")" rel="stylesheet" />*@
 </head>
-
+@{ 
+    string urlGt = "/SEP24Team5/Gioi-thieu";
+    string urlCctc = "/SEP24Team5/Co-cau-to-chuc";
+    string urlDt = "/SEP24Team5/Dao-tao";
+    string urlTd = "/SEP24Team5/Tuyen-dung";
+    string urlDn = "/SEP24Team5/Dang-nhap";
+    string urlDmk = "/SEP24Team5/Doi-mat-khau";
+}
 <body>
 
     <!-- ======= Header ======= -->
@@ -47,17 +54,17 @@
                     <li class="dropdown">
                         <a href="#"><span>Giới thiệu</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="@Url.Action("Index","GioiThieus")">Giới thiệu</a></li>
-                            <li><a href="@Url.Action("Index","CanBoKhoa")">Cơ cấu tổ chức</a></li>
+                            <li><a href="@urlGt">Giới thiệu</a></li>
+                            <li><a href="@urlCctc">Cơ cấu tổ chức</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="@Url.Action("Index","DaoTao")">Đào tạo</a></li>
+                    <li><a class="nav-link scrollto" href="@urlDt">Đào tạo</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Tuyển dụng</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="https://ejob.vanlanguni.edu.vn/" target="_blank">Sinh viên đang học</a></li>
-                            <li><a href="@Url.Action("Index","TuyenDung")">Tuyển dụng</a></li>
+                            <li><a href="@urlTd">Tuyển dụng</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="https://tuyensinh.vanlanguni.edu.vn/cong-nghe-thong-tin/" target="_blank">Tuyển sinh</a></li>
@@ -75,7 +82,7 @@
                     @if (Session["FullName"] == null)
                     {
                         <li>
-                            <a class="nav-link scrollto" href="@Url.Action("Login", "BaiViet")">Đăng nhập</a>
+                            <a class="nav-link scrollto" href="@urlDn">Đăng nhập</a>
                         </li>
                     }
                     else
@@ -87,7 +94,7 @@
                                     <a href="@Url.Action("Logout","BaiViet")">Đăng xuất</a>
                                 </li>
                                 <li>
-                                    <a class="nav-link scrollto" href="@Url.Action("ChangePass","BaiViet")">Đổi mật khẩu</a>
+                                    <a class="nav-link scrollto" href="@urlDmk">Đổi mật khẩu</a>
                                 </li>
                             </ul>
 
@@ -144,14 +151,14 @@
                                             <p>028.38367933</p>
                                         </div>
                                     </a>
-                                    <a href="https://www.facebook.com/" target="_blank">
+                                    <a href="https://www.facebook.com/cnttvlu" target="_blank">
                                         <div class="facebook">
                                             <i class="bi bi-facebook"></i>
                                             <h4>Facebook</h4>
                                             <p></p>
                                         </div>
                                     </a>
-                                    <a href="https://www.instagram.com/" target="_blank">
+                                    <a href="https://www.instagram.com/vanlanguniversity/" target="_blank">
                                         <div class="instagram">
                                             <i class="bi bi-instagram"></i>
                                             <h4>Instagram</h4>
@@ -230,6 +237,10 @@
     <script src="@Url.Content("~/assets1/libs/js/main-js.js")"></script>
     <!-- Template Main JS File -->
     <script src="@Url.Content("~/assets/js/main.js")"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="@Url.Content("~/js/scripts.js")"></script>
     @RenderSection("scripts", required: false)
     <script>
         // tooltip demo
